<resources>
    <string name="app_name">新长大助手</string>
    <string name="app_help">进行运算：\n
        输入表达式即可实时提示与运算，你也可以点击按钮 “=” 进行运算，如果结果是有效数字，将会被记录在ans常数中，引用上次运算结果即可使用ans常数\n\n
        强制停止运算：\n
        如果运算时间过长，你可以长按DEL按钮或者点击左上角的 “运算中” 进行强制停止运算\n\n
        运算结果：\n
        点击运算结果即可复制，长按运算结果可以使其完整显示\n\n
        符号栏：\n
        点击相应的符号按钮插入符号，长按符号按钮可插入右上角显示的符号\n\n
        函数和常数：\n
        界面右侧向左滑动即可打开函数和常数的界面\n\n
        更多的数字与符号：\n
        界面中所有的的按钮区均可向上滑动以显示更多的按钮\n\n
        如何表示其它进制的数：\n
        使用“⑵⑶⑷”等符号放置到数的末尾来标识数的进制即可运算，标识一个16进制的数的例子：FFABC⒃\n\n
        函数的使用方法：\n
        函数的使用方法可以长按对应的函数按钮查看</string>
    <string name="title_home">首页</string>
    <string name="title_grade">成绩</string>
    <string name="title_class">课表</string>
    <string name="title_mine">我的</string>
    <string name="trip">提示</string>
    <string name="cant_open">无法打开</string>
    <string name="double_close_web">再按一次关闭网页</string>
    <string name="done">确定</string>
    <string name="choose_class_time_error">未到选课时间！</string>
    <string name="clear">取消</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">搜索</string>
    <string name="download">下载</string>
    <string name="base_setting">基础设置</string>
    <string name="setting_center">设置中心</string>
    <string name="change_theme">主题更换</string>
    <string name="about">关于</string>
    <string name="please_allow_permission">请允许读写权限以保证App正常运行</string>
    <string name="please_allow_sd_permission">为了保证App运行，请允许以下权限\n\n*读写权限\n*手机状态权限</string>
    <string name="jwc_news">教务通知</string>
    <string name="school_news">学校新闻</string>
    <string name="yangtzeu_new_message">长江大学最新资讯</string>
    <string name="rest">调休</string>
    <string name="load_more"><![CDATA[加载更多>>]]></string>
    <string name="jwc_notice">教务通知</string>
    <string name="jwc_event">本周事务</string>
    <string name="jwc_activity">教学动态</string>
    <string name="jwc_news_paper">教学简报</string>
    <string name="my_table">课表详情</string>
    <string name="please_input">请输入完整</string>
    <string name="start_week">请输入开始周</string>
    <string name="end_week">请输入结束周</string>
    <string name="input_my_class">请输入自定义课表或活动</string>
    <string name="download_ing">文件下载中</string>
    <string name="down_trip">下载提示</string>
    <string name="download_now">立即下载</string>
    <string name="file_name">文件名</string>
    <string name="size">大小</string>
    <string name="download_dir">下载位置</string>
    <string name="open_file">打开文件</string>
    <string name="download_manger">下载管理</string>
    <string name="download_error">下载失败</string>
    <string name="is_save_image">保存图片</string>
    <string name="bt_save">保存</string>
    <string name="save_local">保存位置</string>
    <string name="no_open_app">未安装要跳转的App</string>
    <string name="open_app">即将跳转到App</string>
    <string name="is_open_app">是否安装要跳转的app:</string>
    <string name="web_details">网页详情</string>
    <string name="no_internet">没有网络连接</string>
    <string name="refresh">刷新</string>
    <string name="share">分享</string>
    <string name="open_web">在浏览器中打开</string>
    <string name="copy">复制此链接</string>
    <string name="close">关闭</string>
    <string name="collection">收藏</string>
    <string name="see_image_mode">打开看图模式</string>
    <string name="cant_save">无法收藏</string>
    <string name="cant_load_big_image">无法加载看图模式</string>
    <string name="cant_refresh">无法刷新</string>
    <string name="image_mode_on">看图模式已打开</string>
    <string name="cant_copy">此链接无法复制</string>
    <string name="copy_right">复制成功</string>
    <string name="loading">载入中…</string>
    <string name="saving">保存中</string>
    <string name="save_success">保存成功</string>
    <string name="save_error">保存失败</string>
    <string name="image_details">图片详情</string>
    <string name="change_bg">背景改变</string>
    <string name="save_to_my_phone">保存到手机</string>
    <string name="user">用户</string>
    <string name="m_class">班级</string>
    <string name="news_home">新闻首页</string>
    <string name="jwc_news_web">教务新闻网</string>
    <string name="yangtzeu_news_web">长大新闻网</string>
    <string name="input_number">请输入学号</string>
    <string name="input_pass">请输入密码</string>
    <string name="login">登录</string>
    <string name="belong_xy"><![CDATA[登录即代表同意<font color=\"red\">服务条款</font>\n版权所有©小玉]]></string>
    <string name="yangtzeu_web">教务网页</string>
    <string name="forget_pass">忘记密码？</string>
    <string name="deal_forget_pass">请联系本专业辅导员或去教务科查询密码</string>
    <string name="login_ing">登录中，请稍等</string>
    <string name="login_success">登录成功</string>
    <string name="welcome">欢迎光临</string>
    <string name="your_id">你的ID为</string>
    <string name="know">我知道了</string>
    <string name="can_login_please_open_web">当前教务处系统无法访问，可能是网络错误，请稍后再试，您也可以尝试在浏览器中打开教务处网站</string>
    <string name="login_again">重新登录</string>
    <string name="try_to_open">尝试打开</string>
    <string name="double_exit">再按一返回退键退出程序</string>
    <string name="app_rule">App服务条款</string>
    <string name="app_rule_text1">1.个人信息保护\n除非长江大学的规定外，未经用户许可开发者不会向第三方公开、透露用户个人信息。账户数据只会向长大教务处提交并登录，不会向其它任意第三方发送（学号及密码及相关学业信息）</string>
    <string name="app_rule_text2">\n\n2.App相关\n本App是本人独立开发的，没有任何技术指导，您在使用的过程中若遇到了不可避免的问题，应自行承担由此造成的风险，并且最终解释权归开发者所有！</string>
    <string name="login_error">登录失败</string>
    <string name="phone">手机号码</string>
    <string name="email">邮箱地址</string>
    <string name="find_password">找回密码</string>
    <string name="finding">查询中</string>
    <string name="me_info">我的信息</string>
    <string name="user_name">未登录</string>
    <string name="message">我的消息</string>
    <string name="user_setting">用户操作</string>
    <string name="change_password">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="is_logout">确定退出登录？</string>
    <string name="no_new_message">暂时没有未读的消息</string>
    <string name="new_message">您有新消息啦</string>
    <string name="change_password_ing">修改密码中</string>
    <string name="update_error">更新信息失败</string>
    <string name="input_qq">请输入QQ号码</string>
    <string name="qq_header">QQ头像</string>
    <string name="save">保存</string>
    <string name="clean">清空</string>
    <string name="user_number">学号</string>
    <string name="load_error">加载失败</string>
    <string name="school_lib">图书服务</string>
    <string name="new_book">新书通报</string>
    <string name="top_book">借阅排行</string>
    <string name="lib_home">图书主页</string>
    <string name="grade_point">我的绩点</string>
    <string name="term_grade">本学期成绩</string>
    <string name="all_grade">全部成绩</string>
    <string name="up_to_down">由高到低</string>
    <string name="down_to_up">由低到高</string>
    <string name="change_term">切换学期</string>
    <string name="get_all_grade_xls">成绩导出</string>
    <string name="export_all_grade">成绩导出中</string>
    <string name="refresh_again">请重新刷新</string>
    <string name="user_outline">账户过期，请重新登录</string>
    <string name="export_success">成绩导出成功</string>
    <string name="export_where">导出位置</string>
    <string name="grade_chart">成绩报表</string>
    <string name="no_data">没有数据</string>
    <string name="open_web_table">打开网页课表</string>
    <string name="open_web_grade">打开网页成绩</string>
    <string name="choose_class">我的选课</string>
    <string name="user_cet">Cet专区</string>
    <string name="user_test">我的考试</string>
    <string name="board">留言小屋</string>
    <string name="feedback">用户反馈</string>
    <string name="school_plan">长大校历</string>
    <string name="ping_jiao">量化评教</string>
    <string name="school_internet">校园专区</string>
    <string name="physical">物理实验</string>
    <string name="school_card">饭卡服务</string>
    <string name="cet_kind">Cet类别</string>
    <string name="sub_name">科目名称</string>
    <string name="term_year">学年度</string>
    <string name="cet_year">Cet年份</string>
    <string name="is_pass">是否通过</string>
    <string name="cet_state">Cet状况</string>
    <string name="cet_grade">Cet成绩</string>
    <string name="set_table_bg">自定义</string>
    <string name="load_file_error">文件选择错误</string>
    <string name="clear_set">取消操作</string>
    <string name="default_bg">恢复默认背景</string>
    <string name="table_bg1">背景一</string>
    <string name="table_bg2">背景二</string>
    <string name="table_bg_white">纯白</string>
    <string name="empty_room">查空教室</string>
    <string name="my_test">我的考试</string>
    <string name="test_loading">考试批次加载中…</string>
    <string name="try_again">加载失败，请重试</string>
    <string name="share_test">分享考试</string>
    <string name="choose_date">选择年份</string>
    <string name="change_pass">修改密码</string>
    <string name="change_pass_error">密码修改失败</string>
    <string name="send_replay">发表回复</string>
    <string name="say_something">说点什么吧…</string>
    <string name="replay_error">回复失败，请重试</string>
    <string name="replay_success_refresh">回复成功，请刷新</string>
    <string name="replay_success">回复成功</string>
    <string name="send">发表</string>
    <string name="please_input_text">请输入留言内容</string>
    <string name="sending">发表中…</string>
    <string name="send_success">留言发布成功</string>
    <string name="send_error">留言发布失败</string>
    <string name="commit">提交</string>
    <string name="input_suggestion">请输入留言内容</string>
    <string name="suggestion_error">建议提交失败</string>
    <string name="suggestion_success">感谢你的宝贵建议</string>
    <string name="replay_ing">拼命回复中</string>
    <string name="my_grade">成绩详情</string>
    <string name="set_term">设置学期</string>
    <string name="clean_cache">清空缓存</string>
    <string name="more">更多</string>
    <string name="is_exit">确定退出？</string>
    <string name="check_version">检查更新中，请稍等</string>
    <string name="clean_cache_success">缓存清理完成</string>
    <string name="app_web">软件官网</string>
    <string name="app_belong">Copyright © 2018–2019 小玉. All Rights Reserved.</string>
    <string name="I">|</string>
    <string name="yangtzeu_home">长大官网</string>
    <string name="choose">选择</string>
    <string name="choose_dialog_term">请设选择操作学期</string>
    <string name="choose_year">选择一个年份即可</string>
    <string name="choose_theme">请选择一个主题颜色</string>
    <string name="main_color">软件的主要配色</string>
    <string name="have_class">今日已完成课程</string>
    <string name="not_have_class">今日未完成课程</string>
    <string name="no_class">暂无课程安排</string>
    <string name="no_apply_app">没有检测到支付宝客户端!</string>
    <string name="red_url">https://qr.alipay.com/c1x08894fliska9rxlrecb5</string>
    <string name="apply_redbag_code_key">523185</string>
    <string name="apply_redbag_key">523185</string>
    <string name="apply_me_key">fkx01097fafqwfnmxjtzu1c</string>
    <string name="replay_success_trip">回复成功，对方上线即可看见消息</string>
    <string name="exit_app">退出助手</string>
    <string name="app_list">App合集</string>
    <string name="help">帮助</string>
    <string name="download_help">如果一些文件无法打开，请在手机文件管理器中打开路径查看\n\n[A_Tool/Download/]</string>
    <string name="about_me">关于我</string>
    <string name="no_more">没有更多啦</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_error">删除失败</string>
    <string name="is_delete_msg">是否删除该消息？</string>
    <string name="is_delete_shop">是否删除该商品？</string>
    <string name="is_delete_love">是否删除该表白？</string>
    <string name="history">登录历史</string>
    <string name="choose_user_history">请选择一个用户历史</string>
    <string name="choose_user">登录过的用户账户</string>
    <string name="set_table_alpha">设置课表模块透明度</string>
    <string name="alpha_test">透明度测试</string>
    <string name="change_alpha">滑动改变色块透明度</string>
    <string name="change_type">切换课表</string>
    <string name="choose_table_mode">请选择一个项目</string>
    <string name="change_learn_mode">本科和辅修切换</string>
    <string name="fx_model">辅修</string>
    <string name="bk_model">本科</string>
</resources>