<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/item"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.7"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/cet_kind"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/sub_name"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.7"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/cet_grade"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.7"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/cet_state"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/is_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/is_pass"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.7"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/cet_year"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/term_year"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black_20" />
</LinearLayout>
