<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@mipmap/login_bg" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-50dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="2.5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/numberView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/translate"
                    android:digits="0123456789"
                    android:hint="@string/input_number"
                    android:inputType="number"
                    android:maxLength="9"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black_20" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/translate"
                    android:hint="@string/input_pass"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/yangtzeu_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClickLogin"
            android:padding="5dp"
            android:text="@string/yangtzeu_web"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClickLogin"
            android:padding="5dp"
            android:text="@string/forget_pass"
            android:textSize="13sp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:layout_toStartOf="@+id/forget_pass"
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClickLogin"
            android:padding="5dp"
            android:text="@string/history"
            android:textSize="13sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <Button
        android:textColor="@color/white"
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="18dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="@string/login" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/belong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClickLogin"
            android:padding="5dp"
            android:textSize="12sp" />
    </RelativeLayout>
</LinearLayout>